LabasCode/cilium/cilium-1.14.0-rc.0/cilium-ingress/2-https/4-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
  namespace: default
spec:
  ingressClassName: cilium
  rules:
    - host: bookinfo.cilium.rocks
      http:
        paths:
          - backend:
              service:
                name: details
                port:
                  number: 9080
            path: /details
            pathType: Prefix
          - backend:
              service:
                name: productpage
                port:
                  number: 9080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - bookinfo.cilium.rocks
        - hipstershop.cilium.rocks
      secretName: demo-cert
